--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "gatsby": "^5.13.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
